fixed menu not showing up on mobile

--- a/dove/styles/base.css
+++ b/dove/styles/base.css
@@ -151,6 +151,7 @@ footer {
     background: none;
     color: white;
     z-index: 1000;
+    display: block;
   }
 
   #menu::before {
